--- a/week_01_ml_intro/Homework/hw_1_game_of_thrones.ipynb
+++ b/week_01_ml_intro/Homework/hw_1_game_of_thrones.ipynb
@@ -228,11 +228,11 @@
       "execution_count": 76,
       "metadata": {
         "id": "v0HRU0trQLmS",
-        "outputId": "e0c400d7-5b9f-4bdd-a97c-2fe1fa6ae0e2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 597
-        }
+        },
+        "outputId": "e0c400d7-5b9f-4bdd-a97c-2fe1fa6ae0e2"
       },
       "outputs": [
         {
@@ -887,11 +887,11 @@
       "execution_count": 77,
       "metadata": {
         "id": "1Tv0scrImXTM",
-        "outputId": "1ab436f7-5ab0-4a33-e273-41eb381dffd5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 868
-        }
+        },
+        "outputId": "1ab436f7-5ab0-4a33-e273-41eb381dffd5"
       },
       "outputs": [
         {
@@ -1068,12 +1068,12 @@
         "sns.heatmap(data.isna().transpose())"
       ],
       "metadata": {
-        "id": "4EKp-sgUQs9G",
-        "outputId": "7a05f525-0a03-4c1c-943a-b1a17ccf6254",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 509
-        }
+        },
+        "id": "4EKp-sgUQs9G",
+        "outputId": "7a05f525-0a03-4c1c-943a-b1a17ccf6254"
       },
       "execution_count": 57,
       "outputs": [
@@ -1112,12 +1112,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "jhmQvk8GTnvS",
-        "outputId": "1546b1ca-76a2-4b49-e3b2-c14762c673c7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 430
-        }
+        },
+        "id": "jhmQvk8GTnvS",
+        "outputId": "1546b1ca-76a2-4b49-e3b2-c14762c673c7"
       },
       "execution_count": 58,
       "outputs": [
@@ -1155,11 +1155,11 @@
         "data.dropna(inplace=True)"
       ],
       "metadata": {
-        "id": "KkIDRXXebyAh",
-        "outputId": "40761284-d8c0-457f-fc9d-750bdc7111a1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KkIDRXXebyAh",
+        "outputId": "40761284-d8c0-457f-fc9d-750bdc7111a1"
       },
       "execution_count": 97,
       "outputs": [
@@ -1265,12 +1265,12 @@
         "data['culture'].value_counts()"
       ],
       "metadata": {
-        "id": "TPWgQb2-jSyv",
-        "outputId": "f8762086-b914-42f3-d4ae-d5ad0df27fe1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "TPWgQb2-jSyv",
+        "outputId": "f8762086-b914-42f3-d4ae-d5ad0df27fe1"
       },
       "execution_count": 116,
       "outputs": [
@@ -1502,11 +1502,11 @@
       "execution_count": 63,
       "metadata": {
         "id": "gDret9EFgo_8",
-        "outputId": "e2e33c49-c53e-430e-cd5f-30f7e0d36ae4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 287
-        }
+        },
+        "outputId": "e2e33c49-c53e-430e-cd5f-30f7e0d36ae4"
       },
       "outputs": [
         {
@@ -1526,7 +1526,7 @@
         }
       ],
       "source": [
-        "data.drop(columns=[...], inplace = True)"
+        "data.drop(columns=['mother','father','heil'], inplace = True)"
       ]
     },
     {
