--- a/rhytms.ipynb
+++ b/rhytms.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMY4y/RoBhAw5iAIiCmD183",
+      "authorship_tag": "ABX9TyOlv5nVCR09MS9Ig0zIUhNp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "d5A1cTv5vCrp"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "DEFFtlY0xo81"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
