--- a/rhytms.ipynb
+++ b/rhytms.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOlv5nVCR09MS9Ig0zIUhNp",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyP93+rUr5WY6qEDSzI+SdEC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,18 +28,95 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "id": "d5A1cTv5vCrp"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
       "source": [
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns"
+        "Импорты и подгрузка необходимых библиотек"
+      ],
+      "metadata": {
+        "id": "q-c8I187qld9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install pyedflib numpy scipy"
+      ],
+      "metadata": {
+        "id": "jsw4KfZdoFhc",
+        "outputId": "5632f405-5024-454f-8288-e978c40d8d30",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting pyedflib\n",
+            "  Downloading pyedflib-0.1.42-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (7.2 kB)\n",
+            "Requirement already satisfied: numpy>=1.9.1 in /usr/local/lib/python3.12/dist-packages (from pyedflib) (2.0.2)\n",
+            "Downloading pyedflib-0.1.42-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (2.8 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.8/2.8 MB\u001b[0m \u001b[31m31.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: pyedflib\n",
+            "Successfully installed pyedflib-0.1.42\n"
+          ]
+        }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "from scipy.signal import butter, filtfilt, welch\n",
+        "import pyedflib"
+      ],
+      "metadata": {
+        "id": "1l-MX20Kotnv"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Функции"
+      ],
+      "metadata": {
+        "id": "Gl48lPHLqvER"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Полосовой фильтр на основе [фильтра Баттерфорта](https://ru.wikipedia.org/wiki/Фильтр_Баттерворта?ysclid=mldttz69kp980612220) для обрезвния частот до 1-40Гц(физиологические ритмы)\n"
+      ],
+      "metadata": {
+        "id": "SU72fHSAozHh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def bandfilter(signal, fs):\n",
+        "    nyq = 0.5 * fs\n",
+        "    low, high = 1 / nyq, 40 / nyq\n",
+        "    b, a = butter(4, [low, high], btype='band')\n",
+        "    return filtfilt(b, a, signal)"
+      ],
+      "metadata": {
+        "id": "xVtYu_KkqXvt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "tj__mqwXrcMy"
+      }
     },
     {
       "cell_type": "code",
