--- a/rhytms.ipynb
+++ b/rhytms.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO5EobxsXvTUchqRx2kVETV",
+      "authorship_tag": "ABX9TyMTpsjDscS3VwvBQtwFAra8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,22 +45,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jsw4KfZdoFhc",
-        "outputId": "3e2a3a6b-eaf1-4c0b-d94d-6201d7d18f2b"
+        "outputId": "8618f677-be44-4f63-97eb-19eced6f2c8a"
       },
-      "execution_count": 1,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting pyedflib\n",
-            "  Downloading pyedflib-0.1.42-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (7.2 kB)\n",
+            "Requirement already satisfied: pyedflib in /usr/local/lib/python3.12/dist-packages (0.1.42)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.12/dist-packages (2.0.2)\n",
-            "Requirement already satisfied: scipy in /usr/local/lib/python3.12/dist-packages (1.16.3)\n",
-            "Downloading pyedflib-0.1.42-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (2.8 MB)\n",
-            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/2.8 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m2.8/2.8 MB\u001b[0m \u001b[31m102.9 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.8/2.8 MB\u001b[0m \u001b[31m51.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: pyedflib\n",
-            "Successfully installed pyedflib-0.1.42\n"
+            "Requirement already satisfied: scipy in /usr/local/lib/python3.12/dist-packages (1.16.3)\n"
           ]
         }
       ]
@@ -69,14 +64,14 @@
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
-        "from scipy.signal import butter, filtfilt, welch, find_peaks\n",
+        "from scipy.signal import butter, filtfilt, welch, find_peaks, hilbert\n",
         "import pyedflib\n",
         "import zipfile"
       ],
       "metadata": {
         "id": "1l-MX20Kotnv"
       },
-      "execution_count": 58,
+      "execution_count": 80,
       "outputs": []
     },
     {
@@ -118,7 +113,7 @@
       "metadata": {
         "id": "xVtYu_KkqXvt"
       },
-      "execution_count": 128,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -144,7 +139,7 @@
       "metadata": {
         "id": "DEFFtlY0xo81"
       },
-      "execution_count": 129,
+      "execution_count": 115,
       "outputs": []
     },
     {
@@ -171,7 +166,7 @@
       "metadata": {
         "id": "FCc3GSn-Uqpu"
       },
-      "execution_count": 130,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -190,12 +185,13 @@
         "def detect_blinks(o1, o2, fp1, fp2, fs):\n",
         "    blink_signal = (fp1 + fp2) / 2.0 - (o1 + o2) / 2.0\n",
         "    blink_filtered = band_filter(blink_signal, fs, low=1.0, high=10.0)\n",
+        "    analitycs = hilbert(blink_filtered)\n",
         "    threshold = np.percentile(np.abs(blink_filtered), 98)\n",
         "    threshold = max(threshold, 20.0)\n",
         "    peaks, _ = find_peaks(\n",
-        "        np.abs(blink_filtered),\n",
+        "        np.abs(analitycs),\n",
         "        height=threshold,\n",
-        "        distance=int(0.25 * fs),\n",
+        "        distance=int(1 * fs),\n",
         "        prominence=0.5 * threshold  )\n",
         "\n",
         "    return len(peaks)"
@@ -203,7 +199,7 @@
       "metadata": {
         "id": "xzTHrUNmX86P"
       },
-      "execution_count": 131,
+      "execution_count": 86,
       "outputs": []
     },
     {
@@ -261,25 +257,25 @@
         "cellView": "form",
         "id": "UvBireKNYZ2E"
       },
-      "execution_count": 132,
+      "execution_count": 49,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# @title Функция для более \"мягкой\" классификации шумов\n",
-        "def is_noisy(o1, o2, fp1, fp2, t3, t4, fs, max_allowed_flatness=0.75):\n",
+        "def is_noisy(o1, o2, fp1, fp2, t3, t4, fs, max_allowed_flatness=0.675, max_amp = 300.0):\n",
         "    signals = [o1, o2, fp1, fp2, t3, t4]\n",
         "    flatness_vals = []\n",
         "    high_amp_ratio = []\n",
         "\n",
         "    for sig in signals:\n",
-        "        f_sig = band_filter(sig, fs)\n",
-        "        flat = spectral_flatness(f_sig, fs)\n",
+        "        if np.abs(sig).max() > max_amp:\n",
+        "          return True\n",
+        "        flat = spectral_flatness(sig, fs)\n",
         "        flatness_vals.append(flat)\n",
         "        high_amp = np.abs(sig) > 100.0\n",
         "        high_amp_ratio.append(np.mean(high_amp))\n",
-        "\n",
         "    if any(f > max_allowed_flatness for f in flatness_vals):\n",
         "        return True\n",
         "    if any(ratio > 0.05 for ratio in high_amp_ratio):\n",
@@ -289,10 +285,9 @@
         "    return False"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "MthUQRaBrn09"
       },
-      "execution_count": 150,
+      "execution_count": 95,
       "outputs": []
     },
     {
@@ -341,7 +336,7 @@
         "cellView": "form",
         "id": "gdGJGLfhbV2O"
       },
-      "execution_count": 134,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -360,12 +355,12 @@
       ],
       "metadata": {
         "id": "f9Gi550QcrgO",
-        "outputId": "7088cd11-5e38-44b4-9264-206c5ff1cd75",
+        "outputId": "b153a9b4-ed52-4bfe-8061-8ed20a6b37cc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 135,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -375,7 +370,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 135
+          "execution_count": 52
         }
       ]
     },
@@ -400,7 +395,7 @@
       "metadata": {
         "id": "G-4n_HJhb9P4"
       },
-      "execution_count": 136,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -420,7 +415,7 @@
       "metadata": {
         "id": "HtbQ0RTldreD"
       },
-      "execution_count": 137,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -444,7 +439,7 @@
       "metadata": {
         "id": "ekpYxPiudycQ"
       },
-      "execution_count": 138,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -465,7 +460,7 @@
       "metadata": {
         "id": "o0QJ2yuyd3Me"
       },
-      "execution_count": 139,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -494,13 +489,13 @@
       ],
       "metadata": {
         "id": "nvs6gdQ-eHbD",
-        "outputId": "d0cf20ea-af92-4228-ef5f-606d1b105d18",
+        "outputId": "263f9377-f72d-4f62-db86-6cdf32bafc9d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 35
         }
       },
-      "execution_count": 140,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -513,7 +508,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 140
+          "execution_count": 57
         }
       ]
     },
@@ -533,13 +528,13 @@
       ],
       "metadata": {
         "id": "l5iPPnr3e_PJ",
-        "outputId": "efbc931c-c6cd-4d69-86c3-d5d9b2d9e3e8",
+        "outputId": "4e29fdfe-2efd-46ff-c664-def7c6a2674f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 35
         }
       },
-      "execution_count": 141,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -552,7 +547,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 141
+          "execution_count": 58
         }
       ]
     },
@@ -578,7 +573,7 @@
       "cell_type": "code",
       "source": [
         "# @title Функция анализа 1 записи\n",
-        "def analize_once(file):\n",
+        "def analize_once(file, duration_alpha = 5, alpha_beta_prelative = 2.0):\n",
         "  with pyedflib.EdfReader(file) as f:\n",
         "    signals = [f.readSignal(i).astype(np.float64) for i in range(6)]\n",
         "    fs = [f.getSampleFrequency(i) for i in range(6)][0]\n",
@@ -595,15 +590,16 @@
         "        spectral_flatness(o2_f, fs),\n",
         "        spectral_flatness(fp1_f, fs),\n",
         "        spectral_flatness(fp2_f, fs)])\n",
-        "  alpha = np.mean([relative_power(o1_f, fs, (8, 14)), relative_power(o2_f, fs, (8, 14))])\n",
-        "  beta = np.mean([relative_power(fp1_f, fs, (14, 35)), relative_power(fp2_f, fs, (14, 35))])\n",
+        "  alpha_fp = np.mean([relative_power(fp1_f, fs, (8, 14)), relative_power(fp2_f, fs, (8, 14))])\n",
+        "  beta_fp = np.mean([relative_power(fp1_f, fs, (14, 35)), relative_power(fp2_f, fs, (14, 35))])\n",
+        "  beta_o = np.mean([relative_power(o1_f, fs, (14, 35)), relative_power(o2_f, fs, (14, 35))])\n",
         "  long_alpha = longest_alpha(o1, o2, fs)\n",
         "  if is_noisy(o1, o2, fp1, fp2, t3, t4, fs):\n",
         "      cls = 4\n",
-        "  elif long_alpha >= 3 and alpha > beta:\n",
+        "  elif long_alpha >= duration_alpha and abs(alpha_fp - beta_o) > 0.01:\n",
         "        cls = 1\n",
         "  else:\n",
-        "        if beta / (alpha + 1e-8) > 2.0:\n",
+        "        if beta_fp / (alpha_fp + 1e-8) > alpha_beta_prelative:\n",
         "            cls = 3\n",
         "        else:\n",
         "            cls = 2\n",
@@ -615,7 +611,7 @@
       "metadata": {
         "id": "GbqlF24ggsWS"
       },
-      "execution_count": 152,
+      "execution_count": 125,
       "outputs": []
     },
     {
@@ -639,116 +635,66 @@
       ],
       "metadata": {
         "id": "9KLyoympi0pk",
-        "outputId": "03744755-613b-4c70-ab02-aa440afff0ee",
+        "outputId": "ccfb643d-96d5-4488-c6f5-ae7be46d8bb0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 153,
+      "execution_count": 96,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0.1773885565597816\n",
             "{'class': 1, 'blinks': None, 'longest_alpha_sec': 22.98} 1.edf\n",
-            "0.11760992248098545\n",
             "{'class': 2, 'blinks': None, 'longest_alpha_sec': None} 2.edf\n",
-            "0.25218455097892617\n",
-            "{'class': 3, 'blinks': 11, 'longest_alpha_sec': None} 3.edf\n",
-            "0.14246157282187205\n",
+            "{'class': 3, 'blinks': 8, 'longest_alpha_sec': None} 3.edf\n",
             "{'class': 4, 'blinks': None, 'longest_alpha_sec': None} 4.edf\n",
-            "0.02227310296052171\n",
             "{'class': 2, 'blinks': None, 'longest_alpha_sec': None} 5.edf\n",
-            "0.6208326798006584\n",
             "{'class': 2, 'blinks': None, 'longest_alpha_sec': None} 6.edf\n",
-            "0.24250195106965833\n",
             "{'class': 1, 'blinks': None, 'longest_alpha_sec': 46.12} 7.edf\n",
-            "0.3064947933842944\n",
-            "{'class': 1, 'blinks': None, 'longest_alpha_sec': 3.02} 8.edf\n",
-            "0.6992040601764171\n",
-            "{'class': 2, 'blinks': None, 'longest_alpha_sec': None} 9.edf\n",
-            "0.6563689795003985\n",
+            "{'class': 3, 'blinks': 9, 'longest_alpha_sec': None} 8.edf\n",
+            "{'class': 4, 'blinks': None, 'longest_alpha_sec': None} 9.edf\n",
             "{'class': 2, 'blinks': None, 'longest_alpha_sec': None} 10.edf\n",
-            "0.30902899012633184\n",
             "{'class': 4, 'blinks': None, 'longest_alpha_sec': None} 11.edf\n",
-            "0.18225641957041944\n",
             "{'class': 1, 'blinks': None, 'longest_alpha_sec': 7.43} 12.edf\n",
-            "0.6498465218152151\n",
-            "{'class': 2, 'blinks': None, 'longest_alpha_sec': None} 13.edf\n",
-            "0.06045460589306702\n",
+            "{'class': 4, 'blinks': None, 'longest_alpha_sec': None} 13.edf\n",
             "{'class': 4, 'blinks': None, 'longest_alpha_sec': None} 14.edf\n",
-            "0.1463812226983485\n",
-            "{'class': 1, 'blinks': None, 'longest_alpha_sec': 3.78} 15.edf\n",
-            "0.2670475962385002\n",
+            "{'class': 2, 'blinks': None, 'longest_alpha_sec': None} 15.edf\n",
             "{'class': 2, 'blinks': None, 'longest_alpha_sec': None} 16.edf\n",
-            "0.01158198110592718\n",
             "{'class': 4, 'blinks': None, 'longest_alpha_sec': None} 17.edf\n",
-            "0.2562628246472126\n",
             "{'class': 1, 'blinks': None, 'longest_alpha_sec': 8.87} 18.edf\n",
-            "0.032075841717607495\n",
             "{'class': 4, 'blinks': None, 'longest_alpha_sec': None} 19.edf\n",
-            "0.22976904138044763\n",
             "{'class': 4, 'blinks': None, 'longest_alpha_sec': None} 20.edf\n",
-            "0.26764582061128905\n",
             "{'class': 4, 'blinks': None, 'longest_alpha_sec': None} 21.edf\n",
-            "0.21469752803446038\n",
-            "{'class': 2, 'blinks': None, 'longest_alpha_sec': None} 22.edf\n",
-            "0.05199544084345101\n",
+            "{'class': 4, 'blinks': None, 'longest_alpha_sec': None} 22.edf\n",
             "{'class': 4, 'blinks': None, 'longest_alpha_sec': None} 23.edf\n",
-            "0.24399104718794062\n",
-            "{'class': 3, 'blinks': 7, 'longest_alpha_sec': None} 24.edf\n",
-            "0.28196268258171764\n",
+            "{'class': 4, 'blinks': None, 'longest_alpha_sec': None} 24.edf\n",
             "{'class': 1, 'blinks': None, 'longest_alpha_sec': 10.5} 25.edf\n",
-            "0.21860942659585034\n",
-            "{'class': 3, 'blinks': 15, 'longest_alpha_sec': None} 26.edf\n",
-            "0.4560319984985097\n",
-            "{'class': 1, 'blinks': None, 'longest_alpha_sec': 3.11} 27.edf\n",
-            "0.2022053725244853\n",
+            "{'class': 4, 'blinks': None, 'longest_alpha_sec': None} 26.edf\n",
+            "{'class': 2, 'blinks': None, 'longest_alpha_sec': None} 27.edf\n",
             "{'class': 1, 'blinks': None, 'longest_alpha_sec': 5.7} 28.edf\n",
-            "0.23881245316334374\n",
             "{'class': 4, 'blinks': None, 'longest_alpha_sec': None} 29.edf\n",
-            "0.05006382509068601\n",
             "{'class': 4, 'blinks': None, 'longest_alpha_sec': None} 30.edf\n",
-            "0.2601464289739945\n",
             "{'class': 1, 'blinks': None, 'longest_alpha_sec': 8.87} 31.edf\n",
-            "0.13429134954249927\n",
-            "{'class': 1, 'blinks': None, 'longest_alpha_sec': 5.7} 32.edf\n",
-            "0.1730259623877192\n",
+            "{'class': 2, 'blinks': None, 'longest_alpha_sec': None} 32.edf\n",
             "{'class': 4, 'blinks': None, 'longest_alpha_sec': None} 33.edf\n",
-            "0.6721849080441027\n",
-            "{'class': 3, 'blinks': 28, 'longest_alpha_sec': None} 34.edf\n",
-            "0.1526209776812048\n",
+            "{'class': 4, 'blinks': None, 'longest_alpha_sec': None} 34.edf\n",
             "{'class': 4, 'blinks': None, 'longest_alpha_sec': None} 35.edf\n",
-            "0.12521111213415287\n",
             "{'class': 2, 'blinks': None, 'longest_alpha_sec': None} 36.edf\n",
-            "0.25719778421396206\n",
-            "{'class': 3, 'blinks': 12, 'longest_alpha_sec': None} 37.edf\n",
-            "0.753897514419133\n",
-            "{'class': 2, 'blinks': None, 'longest_alpha_sec': None} 38.edf\n",
-            "0.20878064301019822\n",
+            "{'class': 4, 'blinks': None, 'longest_alpha_sec': None} 37.edf\n",
+            "{'class': 4, 'blinks': None, 'longest_alpha_sec': None} 38.edf\n",
             "{'class': 2, 'blinks': None, 'longest_alpha_sec': None} 39.edf\n",
-            "0.6175669567483293\n",
-            "{'class': 1, 'blinks': None, 'longest_alpha_sec': 20.1} 40.edf\n",
-            "0.2976664798319643\n",
-            "{'class': 2, 'blinks': None, 'longest_alpha_sec': None} 41.edf\n",
-            "0.2484302143553504\n",
-            "{'class': 3, 'blinks': 10, 'longest_alpha_sec': None} 42.edf\n",
-            "0.21443060236750555\n",
-            "{'class': 2, 'blinks': None, 'longest_alpha_sec': None} 43.edf\n",
-            "0.06552417852525129\n",
+            "{'class': 4, 'blinks': None, 'longest_alpha_sec': None} 40.edf\n",
+            "{'class': 4, 'blinks': None, 'longest_alpha_sec': None} 41.edf\n",
+            "{'class': 3, 'blinks': 7, 'longest_alpha_sec': None} 42.edf\n",
+            "{'class': 4, 'blinks': None, 'longest_alpha_sec': None} 43.edf\n",
             "{'class': 4, 'blinks': None, 'longest_alpha_sec': None} 44.edf\n",
-            "0.2576612170138288\n",
             "{'class': 4, 'blinks': None, 'longest_alpha_sec': None} 45.edf\n",
-            "0.11902578515647035\n",
             "{'class': 1, 'blinks': None, 'longest_alpha_sec': 7.05} 46.edf\n",
-            "0.1259041393010476\n",
             "{'class': 1, 'blinks': None, 'longest_alpha_sec': 35.85} 47.edf\n",
-            "0.0008771471171859143\n",
             "{'class': 1, 'blinks': None, 'longest_alpha_sec': 104.97} 48.edf\n",
-            "0.5860337390031763\n",
-            "{'class': 1, 'blinks': None, 'longest_alpha_sec': 3.59} 49.edf\n",
-            "0.4833827123879803\n",
+            "{'class': 2, 'blinks': None, 'longest_alpha_sec': None} 49.edf\n",
             "{'class': 2, 'blinks': None, 'longest_alpha_sec': None} 50.edf\n"
           ]
         },
@@ -756,15 +702,31 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{'labels': '12342211224124124144424313114411434232212324411112',\n",
-              " 'blinks': 83,\n",
+              "{'labels': '12342213424144224144444414214412444244244344411122',\n",
+              " 'blinks': 24,\n",
               " 'longest_alpha': 104.97}"
             ]
           },
           "metadata": {},
-          "execution_count": 153
+          "execution_count": 96
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "метки полученные програмным анализом:\n",
+        "1234221342414422414444441421441244424424434441112\n",
+        "\n",
+        "метки полученные визуальным анализом:\n",
+        "12342213424144224144444414214412444244244344411123\n",
+        "\n",
+        "расхождение только в 50 записи, по неизвестной причине относительные мощности посчитанные алгоритмом и веб-иструментом отличаются, кроме того споры вызва 18 запись, так как по критериям она подходит и под Расслабленное состояние и под Концентрированное состояние, мы предположили, что есть приоритет классов:\n",
+        "Расслабленное имеет приоритет выше чем Концентрированное и Нейтральное"
+      ],
+      "metadata": {
+        "id": "KJUoFxOu3pay"
+      }
     }
   ]
 }
